linux (4.9.2-2) UNRELEASED; urgency=medium

  * [sparc64] Export memcpy and memset to modules again (fixes FTBFS)

 -- Ben Hutchings <ben@decadent.org.uk>  Thu, 12 Jan 2017 00:14:36 +0000

linux (4.9.2-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.9.2

  [ Ben Hutchings ]
  * abiupdate.py: Use current config instead of downloading previous config
  * abiupdate.py: Update base URLs
  * abiupdate.py: Add support for incoming.ports.debian.org
  * Make the pickled config (config.defines.dump) reproducible
  * Remove debug symbol packages from debian/control to work around dak bug
  * udeb: Add switch (DSA) drivers to nic-modules (Closes: #845075)
  * netfilter: Enable NFT_NUMGEN, NFT_QUOTA as modules
  * net/sched: Enable NET_ACT_TUNNEL_KEY, NET_IFE_SKBTCINDEX as modules
  * vsock: Enable VSOCKETS, VHOST_VSOCK, VIRTIO_VSOCKETS as modules
  * hci_uart: Enable BT_HCIUART_MRVL
  * rxrpc: Enable AF_RXRPC_IPV6
  * net: Enable NET_DEVLINK, MACSEC as modules
  * SCSI: Enable SCSI_SMARTPQI as module
  * target: Enable ISCSI_TARGET_CXGB4 as module
  * cxgb4: Enable CHELSIO_T4_FCOE
  * drm: Enable DRM_LEGACY; re-enable DRM_TDFX, DRM_R128, DRM_MGA, DRM_SIS,
    DRM_VIA, DRM_SAVAGE as modules for some architectures
  * 8250: Disable SERIAL_8250_LPSS, since it causes DW_DMAC_CORE to be built-in
  * Partially revert "usb: Kconfig: using select for USB_COMMON dependency",
    since it causes USB_COMMON to be built-in
  * Set ABI to 1

  [ John Paul Adrian Glaubitz ]
  * [sh3] Build a linux-libc-dev package (Closes: #850732)

  [ Martin Michlmayr ]
  * [arm64] Enable MV_XOR and MV_XOR_V2.

 -- Ben Hutchings <ben@decadent.org.uk>  Wed, 11 Jan 2017 04:41:33 +0000

linux (4.9.1-1~exp1) experimental; urgency=medium

  * New upstream release: https://kernelnewbies.org/Linux_4.9
    - Revert "default exported asm symbols to zero"
  * New upstream stable update: