@@ -484,26 +484,7 @@ endif
 	ln -s boot/vmlinux-$(REAL_VERSION) $(DEBUG_DIR)/
 	mkdir -p $(DEBUG_DIR)/lib/modules/$(REAL_VERSION)
 	ln -s ../../../boot/vmlinux-$(REAL_VERSION) $(DEBUG_DIR)/lib/modules/$(REAL_VERSION)/vmlinux
-ifeq (,$(filter nodoc,$(DEB_BUILD_PROFILES)))
-	dh_installdocs
-endif
-	dh_installchangelogs
-	dh_compress
-	dh_fixperms
-	dh_installdeb
-# Workaround for dak bug: any packages listed in debian/control that
-# are not installed in the main archive will always be seen as NEW.
-# So we use the same hack as debhelper: start with the control stanza
-# for the corresponding package and replace almost all fields.
-	dpkg-gencontrol -p$(IMAGE_PACKAGE_NAME) -ldebian/changelog \
-		-Tdebian/$(PACKAGE_NAME).substvars -Pdebian/$(PACKAGE_NAME) \
-		-UPre-Depends -URecommends -USuggests -UProvides -UConflicts \
-		-DPriority=extra -DAuto-Built-Package=debug-symbols \
-		-DPackage=$(PACKAGE_NAME) -UDepends \
-		-DDescription='Debug symbols for linux-image-$(REAL_VERSION)' \
-		-DSection=debug -UMulti-Arch -UReplaces -UBreaks
-	dh_md5sums
-	dh_builddeb -- -Zxz
+	+$(MAKE_SELF) install-base GENCONTROL_ARGS='-DAuto-Built-Package=debug-symbols'
 
 install-udeb_$(ARCH): export KW_DEFCONFIG_DIR=debian/installer
 install-udeb_$(ARCH): export KW_CONFIG_DIR=debian/installer/$(ARCH)
