@@ -1,6 +1,8 @@
 linux (4.9.2-2) UNRELEASED; urgency=medium
 
   * [sparc64] Export memcpy and memset to modules again (fixes FTBFS)
+  * Revert "Remove debug symbol packages from debian/control to work around dak
+    bug", which caused most binary uploads to be rejected
 
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 12 Jan 2017 00:14:36 +0000
 
